--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,7 +81,7 @@ button:hover {
   width: 100%;
   margin: 8px 0;
   padding: 12px;
-  background-color: #e0e7ff;
+  background-color: #154982;
   border: 1px solid #c7d2fe;
   border-radius: 6px;
   font-size: 1rem;
