--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,7 +51,7 @@ h3 {
 
 /* Buttons */
 button {
-  background-color: #4f46e5;
+  background-color: #154982;
   color: white;
   border: none;
   padding: 12px 20px;
