--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -125,7 +125,16 @@
     pointer-events: auto;
     transform: translateY(0);
   }
-
+.nav-links.show::after {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: -1;
+}
   .nav-links li {
     margin-bottom: 1rem;
     width: 100%;
