--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -135,6 +135,17 @@
   background-color: rgba(0, 0, 0, 0.3);
   z-index: -1;
 }
+ .nav-close-btn {
+  position: sticky;
+  top: 0;
+  align-self: flex-end;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+  z-index: 1001;
+} 
   .nav-links li {
     margin-bottom: 1rem;
     width: 100%;
